<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vikrant.triviaapp.MainActivity">

    <TextView
        android:text="@string/main_activity_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textViewMainHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/trivia"
        android:layout_marginTop="39dp"
        android:id="@+id/imageViewMain"
        android:visibility="gone"
        android:layout_below="@+id/textViewMainHeading"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/main_activity_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainHeading"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:id="@+id/textViewMainLoad" />

    <ProgressBar
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainLoad"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:id="@+id/progressBarMain"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_blue_bright" />

    <TextView
        android:text="@string/main_activity_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/imageViewMain"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewMainReady" />

    <Button
        android:text="@string/main_activity_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMainExit"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:textColor="@android:color/background_light"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonMainStart"
        android:layout_toStartOf="@+id/buttonMainStart" />

    <Button
        android:text="@string/main_activity_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMainStart"
        android:textColor="@android:color/background_light"
        android:enabled="false"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
